# data-catalog-service

./: Dockerfile  README.md  docker-compose-dev.yaml  docker-compose.yaml  openapi.json  pyproject.toml
data_catalog_service/: main.py
tests/: docker-compose.yaml  request.md
tests/rdf-to-ngsi-ld/: config.cfg
